--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -16,9 +16,16 @@
     font-family: $font-header;
     @extend %text-shadow;
 
-    font-size: 3.5rem;
-    letter-spacing: 0.33em;
-    margin-right: -0.28em;
+    @include xs-min {
+      font-size: 3.5rem;
+      letter-spacing: 0.33em;
+      margin-right: -0.28em;
+    }
+
+    @include xs {
+      font-size: 2.5rem;
+      letter-spacing: 0.2em;
+    }
   }
 
   &__description {
