--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.header {
+.header, .main, .left-sidebar {
   margin-bottom: 80.0px;
 }
 
@@ -39,9 +39,28 @@
   margin-right: 0;
 }
 
+.panel-info {
+  padding-bottom: 30px;
+  border: none;
+  background-color: #ededed;
+}
+
+.panel-info > .panel-heading {
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  border: none;
+  background-color: #df8a13;
+  font-size: 1.2rem;
+}
+
+.panel-body {
+  border: 1px solid #dddddd;
+  border-radius: 0 0 4px 4px;
+}
+
 html {
-  font-size: 16px;
   overflow-y: scroll;
+  font-size: 16px;
 }
 
 body {
@@ -56,6 +75,12 @@ a {
 a:hover, a:focus {
   text-decoration: none;
   color: #df8a13;
+}
+
+h1 {
+  margin-top: -7.5px;
+  font-family: "PT Serif", serif;
+  font-size: 3rem;
 }
 
 .header-logo {
@@ -75,16 +100,29 @@ a:hover, a:focus {
 
 .header-logo__description {
   display: block;
+  letter-spacing: 0.2em;
   color: #ffffff;
   font-size: 1.15rem;
-  letter-spacing: 0.2em;
+}
+
+.left-sidebar .panel:last-of-type {
+  margin-bottom: 0;
+}
+
+.vertical-slider {
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.vertical-slider img {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
   .header-logo__title {
-    font-size: 3.5rem;
-    letter-spacing: 0.33em;
     margin-right: -0.28em;
+    letter-spacing: 0.33em;
+    font-size: 3.5rem;
   }
 }
 
@@ -114,7 +152,7 @@ a:hover, a:focus {
 
 @media (max-width: 575.8px) {
   .header-logo__title {
-    font-size: 2.5rem;
     letter-spacing: 0.2em;
+    font-size: 2.5rem;
   }
 }
