--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -1,5 +1,6 @@
 .navbar-inverse {
   margin-bottom: 0;
+
   border-color: transparent;
   background-color: darken($color-dark, 4%);
 
@@ -10,7 +11,6 @@
       @include sm-min {
         border-radius: 4px;
       }
-
       @include sm {
         text-align: center;
       }
@@ -37,7 +37,6 @@
       margin: 5px 5px 5px 0;
     }
   }
-
   @include sm {
     margin-bottom: 0;
   }
@@ -49,7 +48,6 @@
       margin: 5px 0 5px 5px;
     }
   }
-
   @include sm {
     margin-top: 0;
   }
@@ -61,5 +59,28 @@
 
 .navbar-toggle {
   float: none;
+
   margin-right: 0;
+}
+
+.panel-info {
+  padding-bottom: $gap * 2;
+
+  border: none;
+  background-color: darken($color-light, 7%);
+}
+
+.panel-info > .panel-heading {
+  letter-spacing: 0.1em;
+
+  color: $color-light;
+  border: none;
+  background-color: $color-accent;
+
+  font-size: 1.2rem;
+}
+
+.panel-body {
+  border: 1px solid $color-gray;
+  border-radius: 0 0 4px 4px;
 }
