--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -63,24 +63,33 @@
   margin-right: 0;
 }
 
-.panel-info {
-  padding-bottom: $gap * 2;
+.panel {
+  &-info {
+    margin-bottom: $gap * 2;
 
-  border: none;
-  background-color: darken($color-light, 7%);
-}
+    border: none;
+    background-color: darken($color-light, 7%);
 
-.panel-info > .panel-heading {
-  letter-spacing: 0.1em;
+    > .panel-heading {
+      letter-spacing: 0.1em;
 
-  color: $color-light;
-  border: none;
-  background-color: $color-accent;
+      color: $color-light;
+      border: none;
+      background-color: $color-accent;
 
-  font-size: 1.2rem;
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .panel-body {
   border: 1px solid $color-gray;
   border-radius: 0 0 4px 4px;
+}
+
+.input {
+  &-lg,
+  &-group-lg > .form-control {
+    font-size: 0.875rem;
+  }
 }
