--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -15,3 +15,136 @@
     width: 100%;
   }
 }
+
+.user-login {
+  position: relative;
+  &__tabs {
+    position: absolute;
+    top: 0;
+    right: 10px;
+
+    border: none;
+
+    a {
+      padding: 14px 5px 11px !important;
+
+      color: $color-gray;
+      border: none !important;
+      background-color: transparent !important;
+    }
+
+    .active a {
+      color: $color-light !important;
+    }
+  }
+}
+.site-news-item {
+  position: relative;
+
+  clear: both;
+
+  &:not(:last-of-type) {
+    min-height: 85px;
+    margin-bottom: $gap;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: -4px;
+
+      width: calc(100% - 85px);
+      height: 1px;
+
+      content: "";
+
+      background-color: $color-gray;
+    }
+  }
+
+  &__image {
+    float: left;
+
+    width: 75px;
+    margin: 0 10px 10px 0;
+
+    img {
+      width: 100%;
+    }
+  }
+  &__title {
+    margin-bottom: 10px;
+    a {
+      @include block-shortener(1rem, 1.5, 50px, 2);
+    }
+  }
+  &__date {
+    text-align: right;
+
+    color: darken($color-gray, 30%);
+
+    font-size: 0.8rem;
+  }
+}
+
+.site-news-item:hover .site-news-item__image,
+.site-news-item:hover a {
+  color: #df8a13;
+  border-color: #df8a13;
+}
+
+.site-news-item:hover .site-news-item__image {
+  background-color: #df8a13;
+}
+
+.thumbnail {
+  transition: background-color 0.25s;
+}
+
+.top-films {
+  &__body {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  &__list {
+    margin-bottom: 0;
+  }
+
+  &__item {
+    margin-right: -1px;
+    margin-left: -1px;
+    padding-right: 55pxgu;
+
+    color: $color-primary !important;
+    background-color: transparent;
+
+    &:first-child {
+      border-top: none;
+      border-radius: 0;
+    }
+
+    &:last-child {
+      border-bottom: none;
+      border-radius: 0;
+    }
+
+    &:hover,
+    &:focus {
+      color: $color-light !important;
+      border-color: $color-accent;
+      background-color: $color-accent !important;
+
+      .badge {
+        background-color: $color-dark;
+      }
+    }
+  }
+
+  &__badge {
+    position: absolute;
+    top: 50%;
+    right: $gap;
+
+    transform: translateY(-50%);
+  }
+}
