--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,3 +1,33 @@
 .main {
   @extend %margin-bottom-lg;
 }
+
+.site-search {
+  margin-bottom: $gap * 3;
+}
+
+.user-login {
+  margin-bottom: $gap * 4;
+}
+
+.new-films {
+  &-row {
+    margin-right: -$gap / 2;
+    margin-left: -$gap / 2;
+    margin-bottom: -$gap;
+  }
+
+  &-item {
+    padding-left: $gap / 2;
+    padding-right: $gap / 2;
+    margin-bottom: $gap;
+
+    &__thumbnail {
+      margin-bottom: 0;
+    }
+
+    &__title {
+      @include text-shortener;
+    }
+  }
+}
